--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,7 +6,7 @@
             "src": "src/app.js",
             "use": "@vercel/node",
             "config": {
-                "includeFiles": [".babelrc"],
+                "includeFiles": [".babelrc", "src/**/*"],
                 "buildCommand": "npm run build"
             }
         }
