--- a/backend/.babelrc
+++ b/backend/.babelrc
@@ -1,5 +1,12 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [
+    ["@babel/preset-env", {
+      "targets": {
+        "node": "current"
+      },
+      "modules": false
+    }]
+  ],
   "plugins": [
     ["module-resolver", {
       "root": ["./src"],
