--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,8 +6,9 @@
             "src": "src/app.js",
             "use": "@vercel/node",
             "config": {
-                "includeFiles": [".babelrc", "src/**/*"],
-                "buildCommand": "npm run build"
+                "includeFiles": [".babelrc", "src/**/*", "package.json"],
+                "buildCommand": "npm run build",
+                "maxLambdaSize": "50mb"
             }
         }
     ],
