--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon",
     "start": "node dist/app.js",
-    "build": "NODE_ENV=production babel src -d dist --copy-files",
+    "build": "babel src -d dist --copy-files",
     "prepare": "husky || true",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
