--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,13 +3,24 @@
   "builds": [
     {
       "src": "dist/app.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["dist/**"],
+        "nodeVersion": "18.x"
+      }
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/dist/app.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "/dist/app.js"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
