--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.26.7",
     "@babel/node": "^7.26.0",
     "@babel/preset-env": "^7.26.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "@date-fns/tz": "^1.2.0",
     "bcryptjs": "^2.4.3",
