--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "latest",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
@@ -16,8 +16,8 @@
   "description": "",
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.3.0",
-
     "@date-fns/tz": "^1.2.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.4.1",
     "cloudinary": "^2.5.1",
@@ -43,7 +43,6 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-
     "@faker-js/faker": "^9.4.0",
     "eslint": "^9.19.0",
     "husky": "^9.1.7",
