--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.3.0",
     "@date-fns/tz": "^1.2.0",
